<resources>
    <string name="app_name">HAPI</string>
    <string name="app_version" translatable="false">Version 2.4.2</string>
    <string name="broadcast_sync" translatable="false">HAPI_BROADCAST_SYNCUPDATE</string>
    <string name="meallist_photo_download" translatable="false">HAPI_BROADCAST_MEALLISTPHOTO</string>
    <string name="meallist_photo_download_update" translatable="false">HAPI_BROADCAST_MEALLISTPHOTO_UPDATE</string>
    <string name="meallist_getmeal_week" translatable="false">HAPI_BROADCAST_WEEK_SWIPE</string>
    <string name="meallist_get_new_week" translatable="false">HAPI_BROADCAST_NEW_WEEK</string>
    <string name="meallist_getavatar" translatable="false">HAPI_BROADCAST_AVATAR</string>
    <string name="meallist_addmeal" translatable="false">HAPI_BROADCAST_ADD_MEAL</string>
    <string name="meallist_addmeal_refresh" translatable="false">HAPI_BROADCAST_ADD_MEAL_REFRESH</string>
    <string name="meallist_deletehapimoment_refresh" translatable="false">HAPI_BROADCAST_DELETE_HAPIMOMENT_REFRESH</string>
    <string name="meallist_deletemeal_refresh" translatable="false">HAPI_BROADCAST_DELETE_MEAL_REFRESH</string>
    <string name="workoutListUpdate" translatable="false">HAPI_BROADCAST_WORKOUT</string>
    <string name="workoutListDelete" translatable="false">HAPI_BROADCAST_DELETE_WORKOUT</string>
    <string name="progress_refresh" translatable="false">PROGRESS_REFRESH</string>
    <string name="googlefit_request" translatable="false">GOOGLEFIT_REQUEST_AGAIN</string>
    <string name="googlefit_webview" translatable="false">GOOGLEFIT_WEBVIEW</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_save">Save</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_premium" translatable="false">Premium</string>
    <string name="btn_now" translatable="false">Now</string>
    <string name="btn_later">Later</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_save_meal">Save meal</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_done">Done</string>
    <string name="btn_gotit">I want to start now</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_tellme">Tell me more</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_editmeal">Edit Meal</string>
    <string name="message_hint">Add Message</string>
    <string name="about_about">About</string>
    <string name="about_me">Me</string>
    <string name="about_terms">Terms of Service</string>
    <string name="about_policy">Privacy Policy</string>
    <string name="about_contactus">Contact Us</string>
    <string name="default_coach_firstname" translatable="false"></string>
    <string name="default_coach_lastname" translatable="false"></string>
    <string name="ONETOONECOACHING_INTRO_HEADER">Your new diet journal is now easier to use</string>
    <string name="ONETOONECOACHING_INTRO_TEXT1">For each meal, use your mobile phone or tablet to take a picture of what is on your plate</string>
    <string name="ONETOONECOACHING_INTRO_TEXT2">Add a description (if you want!)</string>
    <string name="ONETOONECOACHING_INTRO_TEXT3">And you will receive comments from your dietitian</string>
    <string name="ONETOONECOACHING_INTRO_CARNETMINCEUR">Diet Journal</string>
    <string name="ONETOONECOACHING_INTRO_BUTTONAGREE">I agree</string>
    <string-array name="objective_array">
        <item name="OBJECTIVES_SELECTION_1">Lose Weight</item>
        <item name="OBJECTIVES_SELECTION_2">Eat Healthier</item>
        <item name="OBJECTIVES_SELECTION_3">Get More Fit</item>
    </string-array>
    <string-array name="source_array">
        <item name="SOURCE_SELECTION_1">Actinutrition</item>
        <item name="SOURCE_SELECTION_2">Clinique De Paris</item>
        <item name="SOURCE_SELECTION_3">Medias</item>
        <item name="SOURCE_SELECTION_4">Advertising</item>
        <item name="SOURCE_SELECTION_5">Word Of Mouth</item>
        <item name="SOURCE_SELECTION_6">Other</item>
    </string-array>
    <string-array name="profession_array">
        <item name="PROFESSION_SELECTION_1">Registered dietetian</item>
        <item name="PROFESSION_SELECTION_2">Fitness coach</item>
        <item name="PROFESSION_SELECTION_3">Life coach</item>
        <item name="PROFESSION_SELECTION_4">Medical Doctor</item>
        <item name="PROFESSION_SELECTION_5">Other</item>
    </string-array>
    <string name="EATINGHABITS_SELECTION_1">I eat balanced meals</string>
    <string name="EATINGHABITS_SELECTION_2">I skip meals often</string>
    <string name="EATINGHABITS_SELECTION_3">I often eat fastfood</string>
    <string name="EATINGHABITS_SELECTION_4">I often eat for pleasure</string>
    <string name="EATINGHABITS_SELECTION_5">I eat plenty of fruits &amp; veggies</string>
    <string name="EATINGHABITS_SELECTION_6">I am following a specific diet</string>
    <string name="SIGNUP_EMAIL">Email</string>
    <string name="SIGNUP_PASSWORD">Password</string>
    <string name="SIGNUP_CONFIRM_PASSWORD">Confirm Password</string>
    <string name="SIGNUP_EMAIL_PLACEHOLDER">Input email</string>
    <string name="SIGNUP_EMAIL_ERROR">Your email format is wrong. Please input a valid email.</string>
    <string name="SIGNUP_PASSWORD_PLACEHOLDER">Input password</string>
    <string name="SIGNUP_CONFIRM_PASSWORD_PLACEHOLDER">Re-input password</string>
    <string name="SIGNUP_EMAIL_EXIST">Email already exists</string>
    <string name="NAVIGATIONTITLE_OBJECTIVE">Your Objective</string>
    <string name="NAVIGATIONTITLE_EATINGHABITS">Describe Your Eating Habits</string>
    <string name="NAVIGATION_SIGNUP">Sign Up!</string>
    <string name="NAVIGATIONTITLE_COMPLETE_HAPIPROFILE">Complete Your HAPI Profile</string>
    <string name="NAVIGATIONTITLE_SELECTCOACH">Select Your Coach</string>
    <string name="OBJECTIVE_IWANTTO">I want to...</string>
    <string name="OBJECTIVE_CURRENTWEIGHT">Current Weight</string>
    <string name="OBJECTIVE_TARGETWEIGHT">Target Weight</string>
    <string name="OBJECTIVE_HEIGHT">Height</string>
    <string name="PROFILE_FIRSTNAME">First Name</string>
    <string name="PROFILE_LASTNAME">Last Name</string>
    <string name="PROFILE_GENDER">Gender</string>
    <string-array name="gender_array">
        <item name="PROFILE_GENDER_MALE_ARR">Male</item>
        <item name="PROFILE_GENDER_FEMALE_ARR">Female</item>
    </string-array>
    <string-array name="number_array">
        <item name="number44">44 kg</item>
        <item name="number45">45 kg</item>
        <item name="number46">46 kg</item>
        <item name="number47">47 kg</item>
        <item name="number48">48 kg</item>
        <item name="number49">49 kg</item>
        <item name="number50">50 kg</item>
        <item name="number51">51 kg</item>
        <item name="number52">52 kg</item>
        <item name="number53">53 kg</item>
        <item name="number54">54 kg</item>
        <item name="number55">55 kg</item>
        <item name="number56">56 kg</item>
        <item name="number57">57 kg</item>
        <item name="number58">58 kg</item>
        <item name="number59">59 kg</item>
        <item name="number60">60 kg</item>
        <item name="number61">61 kg</item>
        <item name="number62">62 kg</item>
        <item name="number63">63 kg</item>
        <item name="number64">64 kg</item>
        <item name="number65">65 kg</item>
        <item name="number66">66 kg</item>
        <item name="number67">67 kg</item>
        <item name="number68">68 kg</item>
        <item name="number69">69 kg</item>
        <item name="number70">70 kg</item>
        <item name="number71">71 kg</item>
        <item name="number72">72 kg</item>
        <item name="number73">73 kg</item>
        <item name="number74">74 kg</item>
        <item name="number75">75 kg</item>
        <item name="number76">76 kg</item>
        <item name="number77">77 kg</item>
        <item name="number78">78 kg</item>
        <item name="number79">79 kg</item>
        <item name="number80">80 kg</item>
        <item name="number81">81 kg</item>

    </string-array>
    <string-array name="number_cm_array">
        <item name="number120">120 cm</item>
        <item name="number121">121 cm</item>
        <item name="number122">122 cm</item>
        <item name="number123">123 cm</item>
        <item name="number124">124 cm</item>
        <item name="number125">125 cm</item>
        <item name="number126">126 cm</item>
        <item name="number127">127 cm</item>
        <item name="number128">128 cm</item>
        <item name="number129">129 cm</item>
        <item name="number130">130 cm</item>
        <item name="number131">131 cm</item>
        <item name="number132">132 cm</item>
        <item name="number133">133 cm</item>
        <item name="number134">134 cm</item>
        <item name="number135">135 cm</item>
        <item name="number136">136 cm</item>
        <item name="number137">137 cm</item>
        <item name="number138">138 cm</item>
        <item name="number139">139 cm</item>
        <item name="number140">140 cm</item>
        <item name="number141">141 cm</item>
        <item name="number142">142 cm</item>
        <item name="number143">143 cm</item>
        <item name="number144">144 cm</item>
        <item name="number145">145 cm</item>
        <item name="number146">146 cm</item>
        <item name="number147">147 cm</item>
        <item name="number148">148 cm</item>
        <item name="number149">149 cm</item>
        <item name="number150">150 cm</item>
        <item name="number151">151 cm</item>
        <item name="number152">152 cm</item>
        <item name="number153">153 cm</item>
        <item name="number154">154 cm</item>
        <item name="number155">155 cm</item>
        <item name="number156">156 cm</item>
        <item name="number157">157 cm</item>
        <item name="number158">158 cm</item>
        <item name="number159">159 cm</item>
        <item name="number160">160 cm</item>
        <item name="number161">161 cm</item>
        <item name="number162">162 cm</item>
        <item name="number163">163 cm</item>
        <item name="number164">164 cm</item>
        <item name="number165">165 cm</item>
        <item name="number166">166 cm</item>
        <item name="number167">167 cm</item>
        <item name="number168">168 cm</item>
        <item name="number169">169 cm</item>
        <item name="number170">170 cm</item>
        <item name="number171">171 cm</item>
        <item name="number172">172 cm</item>
        <item name="number173">173 cm</item>
        <item name="number174">174 cm</item>
        <item name="number175">175 cm</item>
        <item name="number176">176 cm</item>
        <item name="number177">177 cm</item>
        <item name="number178">178 cm</item>
        <item name="number179">179 cm</item>
        <item name="number180">180 cm</item>
        <item name="number181">181 cm</item>
        <item name="number182">182 cm</item>
        <item name="number183">183 cm</item>
        <item name="number184">184 cm</item>
        <item name="number185">185 cm</item>
    </string-array>
    <string name="PROFILE_GENDER_MALE">Male</string>
    <string name="PROFILE_GENDER_FEMALE">Female</string>
    <string name="PROFILE_BIRTHDAY">Birthday</string>
    <string name="HAPIFORK_MEAL_DURATION">Duration</string>
    <string name="HAPIFORK_MEAL_ACTIVE_MIN">Active Minutes</string>
    <string name="HAPIFORK_MEAL_AVE_INTERVAL">Ave. Interval</string>
    <string name="HAPIFORK_MEAL_SUCCESS_RATE">Success Rate</string>
    <string name="HAPIFORK_MEAL_FORK_SERVINGS_MIN">Fork Servings/min</string>
    <string name="HAPIFORK_MEAL_FORK_SERVINGS">Fork Servings</string>
</resources>