<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white"
    android:orientation="vertical">

    <!--Stats First Row-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:weightSum="3">

        <!--Duration-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background_gray">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/timeline_icon_duration" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hapifork_duration_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/icon"
                    android:text="24:16"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hapifork_duration_value"
                    android:layout_marginLeft="5dp"
                    android:text="@string/HAPIFORK_MEAL_DURATION"
                    android:textColor="#696969"
                    android:textSize="11dp" />

            </LinearLayout>

        </LinearLayout>

        <!--Active Minutes-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background_gray">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/timeline_icon_activeminutes" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hapifork_active_min_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="14:30"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hapifork_active_min_value"
                    android:layout_marginLeft="5dp"
                    android:text="@string/HAPIFORK_MEAL_ACTIVE_MIN"
                    android:textColor="#696969"
                    android:textSize="10dp" />

            </LinearLayout>

        </LinearLayout>

        <!--Fork Servings/min-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background_gray">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/timeline_icon_forkservingsmin" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hapifork_stats_fork_servings_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:text="2.0"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hapifork_stats_fork_servings_min"
                    android:layout_marginLeft="0dp"
                    android:text="@string/HAPIFORK_MEAL_FORK_SERVINGS_MIN"
                    android:textColor="#696969"
                    android:textSize="9dp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <!--Stats Second Row-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <!--Ave. Interval-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background_gray">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/timeline_icon_aveinterval" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hapifork_ave_interval_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/icon"
                    android:text="30sec"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hapifork_ave_interval_value"
                    android:layout_marginLeft="5dp"
                    android:text="@string/HAPIFORK_MEAL_AVE_INTERVAL"
                    android:textColor="#696969"
                    android:textSize="11dp" />

            </LinearLayout>

        </LinearLayout>

        <!--Success Rate-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background_gray">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/timeline_icon_successrate" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hapifork_success_rate_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="14:30"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hapifork_success_rate_value"
                    android:layout_marginLeft="5dp"
                    android:text="@string/HAPIFORK_MEAL_SUCCESS_RATE"
                    android:textColor="#696969"
                    android:textSize="11dp" />

            </LinearLayout>

        </LinearLayout>

        <!--Fork Servings-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background_gray">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/timeline_icon_forkservings" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hapifork_stats_fork_servings_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="29"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hapifork_stats_fork_servings_value"
                    android:layout_marginLeft="2dp"
                    android:text="@string/HAPIFORK_MEAL_FORK_SERVINGS"
                    android:textColor="#696969"
                    android:textSize="11dp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
